# retain-pdf

./: .dockerignore  .gitignore  260511_render_task.csv  LICENSE  README.md  VERSION  architecture_tasks.csv  docker-compose.yml  task_260510.csv  task_260511.csv  task_decoupling_master.csv  task_decoupling_round2.csv  task_decoupling_round3.csv  task_render_decoupling.csv
backend/rust_api/: API_SPEC.md  CURRENT_API_MAP.md  Cargo.toml  MinerU_OCR_Service_API.md  OCR_Service_API.md  README.md  RENDER_OPTIONS_CONTRACT.md  RUST_API_ARCHITECTURE.md  RUST_API_DIRECTORY_MAP.md  STAGE_EXECUTION_CONTRACT.md  api.md  frontend_request_example.md
backend/rust_api/docs/: LIBRARY_API.md  README.md
backend/rust_api/scripts/: check_architecture.py
backend/rust_api/src/: auth.rs  config.rs  db.rs  error.rs  job_events.rs  job_failure.rs  job_failure_support.rs  job_runner.rs  lib.rs  main.rs  models.rs  storage_paths.rs  worker_command.rs
backend/rust_api/src/app/: jobs.rs  router.rs  state.rs
backend/rust_api/src/config/: auth.rs  env_vars.rs  job_runner.rs  paths.rs  provider.rs  server.rs  upload.rs
backend/rust_api/src/db/: rows.rs
backend/rust_api/src/job_runner/: commands.rs  execution_queue.rs  lifecycle.rs  mod.rs  ocr_flow.rs  pipeline_plan.rs  process_contract.rs  process_runner.rs  render_flow.rs  runtime_deps.rs  stage_contract.rs  stdout_parser.rs  translation_flow.rs  translation_flow_child.rs  translation_flow_executor.rs  translation_flow_stage.rs  translation_flow_support.rs  worker_process.rs
frontend/desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
(+1366 files in other folders)
