[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
once_cell = "1"
mime_guess = "2"
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lopdf = "0.32"
fastrand = "2"
libc = "0.2"
