[package]
name = "desktop_app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1"
fastrand = "2"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_api = { path = "../../../backend/rust_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3" }
tokio = { version = "1", features = ["sync", "time"] }
